# claude-session-commons

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  com.claude.session-daemon.plist  pyproject.toml  run_eval.sh  run_training_pipeline.sh
.forge/: manifest.yaml
.github/workflows/: ci.yml
.visionlog/: config.yaml
claude_session_commons/: __init__.py  cache.py  chat_agent.py  chat_history.py  chunkers.py  classify.py  cli_find.py  daemon.py  discovery.py  display.py  entities.py  export.py  git_context.py  hierarchy.py  insights.py  parse.py  paths.py  playbooks.py  reindex.py  scoring.py  tail.py
claude_session_commons.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
claude_session_commons/summarizer/: __init__.py  dataset.py  evaluate.py  export.py  inference.py  train.py
claude_session_commons/tui/: __init__.py  chat_screen.py  ops.py  session_picker.py  widgets.py
claude_session_commons/web/: __init__.py  app.py  chat_persist.py  chat_state.py  playbook_agent.py  rag_agent.py
claude_session_commons/web/templates/: _chat_css.html  _chat_js.html  _chat_panel.html  chat.html  dashboard.html  home.html  playbooks.html
docs/: jsonl-schema.md
planning/: PRD.md  README.md  SPEC.md
qa/: README.md
tests/: test_chunkers.py  test_cli_find.py  test_entities.py  test_insights.py  test_playbooks.py  test_rag_agent.py  test_reindex.py  test_tui.py  test_web.py
tests/fixtures/: sample_session.jsonl
